--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -19,7 +19,7 @@
     "description": "Find houses for sale in Alicante, Spain. Flats, Apartments, Chalets. Inmobiliaria Núcleo helps you choose between the best properties in Alicante. Visit Us!",
     "hero-title-1": "Welcome to",
     "hero-title-2": "Inmobiliaria Núcleo",
-    "hero-subtitle": "We advise you either with the sale or with the purchase of real estate\u00A0in\u00A0Alicante.",
+    "hero-subtitle": "We advise you either with the sale or with the purchase of real estate\u00A0in\u00A0<span class=\"text-primary\">Alicante</span>",
     "vender": "Sell your house",
     "comprar": "Buy your house",
     "section-flats-title": "Properties in Alicante",
@@ -88,8 +88,7 @@
     "metaDescription": "Sell your Alicante properties for the best price thanks to Inmobiliaria Núcleo",
     "form": {
       "title": "Sell your house fast with\u00A0us",
-      "subtitle": "Please, fill in the following form to get in touch with the\u00A0Núcleo\u00A0team",
-      "subtitle2": "Free valuation without\u00A0commitment",
+      "subtitle": "Please, fill in the following form to get in touch with the\u00A0Núcleo\u00A0team<br><br><span class=\"font-weight-bold\"><span class=\"text-primary\">Free</span> valuation without\u00A0commitment</span>",
       "send": "Send",
       "contactUs": "Contact us"
     },
@@ -112,21 +111,21 @@
     },
     "houseValue": {
       "title": "Know the value of your\u00A0property",
-      "subtitle": "Free home appraisal\u00A0service",
+      "subtitle": "<span class=\"text-primary\">Free</span> home appraisal\u00A0service",
       "description1": "Thanks to our extensive experience in the local real estate market, we know the real sales prices of each\u00A0neighborhood.",
       "description2": "In addition, we have the most advanced software in real estate management, which allows us to propose the right price to sell\u00A0your\u00A0home.",
       "description3": "All of this without obligation and completely free\u00A0of\u00A0charge."
     },
     "idealBuyer": {
       "title": "We find the ideal\u00A0buyer",
-      "subtitle": "Fully personalized marketing\u00A0plan",
+      "subtitle": "Fully personalized <span class=\"text-primary\">marketing\u00A0plan</span>",
       "description1": "We have virtual reality cameras. This way users will visit your property like\u00A0never\u00A0before.",
       "description2": "We will also promote your property in our offices as well as in our monthly magazine to give it maximum\u00A0visibility.",
       "description3": "We carry out an analysis of all the possible buyers profiles to find the ones that best suit your\u00A0interests."
     },
     "adjustNeeds": {
       "title": "We adjust to your\u00A0needs",
-      "subtitle": "Integral management, from start to\u00A0finish",
+      "subtitle": "<span class=\"text-primary\">Integral management</span>, from start to\u00A0finish",
       "description1": "We do a photographic report (2D and 3D) and we take care of the release of the ads on all the media, both online\u00A0and\u00A0offline.",
       "description2": "We take care of all the documentation procedures and accompany you to the notary at the time\u00A0of\u00A0signing.",
       "description3": "During the entire process, if you have any questions, you just have to pick up the phone and our advisors will be happy to\u00A0assist\u00A0you."
@@ -147,8 +146,7 @@
     "metaDescription": "Alicante Real Estate Inmobiliaria Núcleo contact information",
     "form": {
       "title": "Contact us",
-      "subtitle": "Please, fill in the following form to get in touch with the\u00A0Núcleo\u00A0team",
-      "subtitle2": "Call us at (+34)\u00A0965\u00A0999\u00A0554",
+      "subtitle": "Please, fill in the following form to get in touch with the\u00A0Núcleo\u00A0team<br><br><span class=\"font-weight-bold\">Call us at <a href=\"tel:+34965999554\">(+34)\u00A0965\u00A0999\u00A0554</a></span>",
       "send": "Send"
     },
     "offices": {
