more adjustments in sell house page

--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -128,7 +128,7 @@
       "subtitle": "<span class=\"text-primary\">Integral management</span>, from start to\u00A0finish",
       "description1": "We do a photographic report (2D and 3D) and we take care of the release of the ads on all the media, both online\u00A0and\u00A0offline.",
       "description2": "We take care of all the documentation procedures and accompany you to the notary at the time\u00A0of\u00A0signing.",
-      "description3": "During the entire process, if you have any questions, you just have to pick up the phone and our advisors will be happy to\u00A0assist\u00A0you."
+      "description3": "If you have any questions, you just have to pick up the phone and our advisors will be happy to\u00A0assist\u00A0you."
     }
   },
   "aboutUs": {
