--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -119,7 +119,7 @@
     "idealBuyer": {
       "title": "Encontramos al comprador\u00A0ideal",
       "subtitle": "<span class=\"text-primary\">Plan de marketing</span> totalmente\u00A0personalizado",
-      "description1": "Contamos con cámaras de realidad virtual para que su vivienda luzca como nunca en los principales portales inmobiliarios, tanto nacionales como\u00A0internacionales.",
+      "description1": "Contamos con cámaras de realidad virtual para que su vivienda luzca como nunca en los principales portales inmobiliarios nacionales\u00A0e\u00A0internacionales.",
       "description2": "También promocionaremos su vivienda en nuestras oficinas y nuestra revista mensual para darle la\u00A0máxima\u00A0visibilidad",
       "description3": "Realizamos un análisis del perfil de todos los posibles compradores para encontrar los que más se ajustan a\u00A0sus\u00A0intereses."
     },
@@ -128,7 +128,7 @@
       "subtitle": "<span class=\"text-primary\">Gestión integral</span>, de principio\u00A0a\u00A0fin",
       "description1": "Realizamos un reportaje fotográfico (2D y 3D) y nos hacemos cargo de la publicación de los anuncios en todos los canales, tanto online como\u00A0offline.",
       "description2": "Nos encargamos de todas las gestiones de documentación y le acompañamos a la notaría en el momento de\u00A0la\u00A0firma.",
-      "description3": "Durante todo el proceso, si tiene cualquier consulta solo tiene que descolgar el teléfono y nuestros asesores estarán encantados\u00A0de\u00A0atenderle."
+      "description3": "Si tiene cualquier consulta solo tiene que descolgar el teléfono y nuestros asesores estarán encantados\u00A0de\u00A0atenderle."
     }
   },
   "aboutUs": {
