--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -5,15 +5,17 @@
     "sellHouse": "Sell your house",
     "aboutUs": "About us",
     "contact": "Contact",
-    "language": "English",
+    "blog": "News",
     "hamburgerLanguage": "Language"
   },
   "footer": {
     "nucleo-sl": "© 2020 Núcleo S.L.",
-    "blog": "News",
     "aviso-legal": "Legal warning",
     "politica-datos": "Data protection",
     "politica-cookies": "Cookies policy"
+  },
+  "languageSelector": {
+    "language": "English"
   },
   "home": {
     "title": "Properties in Alicante | Inmobiliaria Núcleo",
