--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -29,7 +29,10 @@
     "blog-showcase-title": "Latest trends in the house\u00A0market",
     "blog-showcase-subtitle": "Be the first to read about the latest news, the best corners in Alicante and\u00A0much\u00A0more!",
     "blog-button": "News",
-    "newsletter-title": "Subscribe to our\u00A0newsletter"
+    "newsletter-title": "Subscribe to our\u00A0newsletter",
+    "map": {
+      "title": "Map search"
+    }
   },
   "flat": {
     "title": "{{type}} in {{address}}",
