--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -29,7 +29,10 @@
     "blog-showcase-title": "Conozca las tendencias del mercado\u00A0inmobiliario",
     "blog-showcase-subtitle": "¡Sea el primero en conocer todas las novedades, los mejores rincones de Alicante\u00A0y\u00A0mucho\u00A0más!",
     "blog-button": "Noticias",
-    "newsletter-title": "Suscríbase a nuestra newsletter"
+    "newsletter-title": "Suscríbase a nuestra newsletter",
+    "map": {
+      "title": "Búsqueda por mapa"
+    }
   },
   "flat": {
     "title": "{{type}} en {{address}}",
