--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -105,7 +105,7 @@
         },
         "fast": {
           "title": "Speed",
-          "description": "We have a powerful database shared between our offices and more than 30 advisers working to sell\u00A0your\u00A0home."
+          "description": "We have a powerful database shared between <a href=\"/contacto?office=SanBlas\">our offices</a> and more than 30 advisers working to sell\u00A0your\u00A0home."
         },
         "experience": {
           "title": "Experience",
