--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -105,7 +105,7 @@
         },
         "fast": {
           "title": "Rapidez",
-          "description": "Contamos con una potente base de datos compartida entre nuestras oficinas y más de 30 asesores trabajando para vender\u00A0su\u00A0vivienda"
+          "description": "Contamos con una potente base de datos compartida entre <a href=\"/contacto?office=SanBlas\">nuestras oficinas</a> y más de 30 asesores trabajando para vender\u00A0su\u00A0vivienda"
         },
         "experience": {
           "title": "Experiencia",
