changed design of blog showcase

--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -30,7 +30,7 @@
     "email": "Correo electrónico",
     "blog-showcase-title": "Conozca las tendencias del mercado\u00A0inmobiliario",
     "blog-showcase-subtitle": "¡Sea el primero en conocer todas las novedades, los mejores rincones de Alicante\u00A0y\u00A0mucho\u00A0más!",
-    "blog-button": "Noticias",
+    "blog-button": "Visite nuestro blog",
     "newsletter-title": "Suscríbase a nuestra newsletter"
   },
   "flat": {
