--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -34,6 +34,10 @@
     "newsletter-title": "Subscribe to our\u00A0newsletter",
     "map": {
       "title": "Map search"
+    },
+    "suggestions": {
+      "title": "Our recommendations",
+      "buttonText": "See here >"
     }
   },
   "flat": {
