--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -168,10 +168,16 @@
     },
     "offices": {
       "title": "Nuestras oficinas"
+    }
+  },
+  "officeDetail": {
+    "metaTitle": "Oficina {{name}} - Inmobiliaria Núcleo",
+    "metaDescription": "Oficina {{name}} - Inmobiliaria Núcleo",
+    "messages": {
+      "flatsTitle": "Viviendas gestionadas"
     },
-    "flats": {
-      "title": "Viviendas gestionadas",
-      "showmore": "Mostrar más"
+    "actions": {
+      "showMoreFlats": "Mostrar más"
     }
   },
   "search": {
@@ -243,6 +249,16 @@
     "flatOrderBy": {
       "price asc": "precio ascendente",
       "price desc": "precio descendente"
+    },
+    "officeDetailTab": {
+      "INFORMATION": "Información",
+      "DESCRIPTION": "Descripción",
+      "TEAM": "Equipo"
+    },
+    "employeePosition": {
+      "MANAGER": "Gerente",
+      "ADVISOR": "Asesor",
+      "ADVISOR_F": "Asesora"
     }
   },
   "messages": {
