added offices links

--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -5,6 +5,7 @@
     "sellHouse": "Sell your house",
     "aboutUs": "About us",
     "contact": "Contact",
+    "offices": "Offices",
     "blog": "News",
     "hamburgerLanguage": "Language"
   },
