--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -5,6 +5,7 @@
     "sellHouse": "Vender casa",
     "aboutUs": "Quiénes somos",
     "contact": "Contacto",
+    "offices": "Oficinas",
     "blog": "Noticias",
     "hamburgerLanguage": "Idioma"
   },
